# P20260415-cv-pipeline

./: .dvcignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  bench_detr_fp32_int8_pytorch.json  pyproject.toml
app_demo/: CLAUDE.md  README.md  __init__.py  (+4 more)
notebooks/detr_finetune_reference/: .gitignore  CLAUDE.md  README.md  data_loader.py  dfine_finetune_cppe5.py  pyproject.toml  requirements.txt  rtdetr_v2_finetune_cppe5.py  run_inference.py
notebooks/detr_finetune_reference/custom_rtdetr_v2/: 05_RTDERTV2_pytorch.ipynb
notebooks/detr_finetune_reference/our_dfine/: README.md
notebooks/detr_finetune_reference/our_dfine_albumentations/: 06_training.yaml  06_training_dfine_n_norm_false_ema_false.yaml  README.md
notebooks/detr_finetune_reference/our_dfine_torchvision/: 05_data.yaml  06_training.yaml  06_training_dfine_m.yaml  06_training_dfine_m_norm_false_ema_false.yaml  06_training_dfine_m_norm_false_ema_true.yaml  06_training_dfine_m_norm_true_ema_false.yaml  06_training_dfine_m_norm_true_ema_true.yaml  06_training_dfine_n_norm_false_ema_false.yaml  06_training_dfine_n_norm_false_ema_true.yaml  06_training_dfine_n_norm_true_ema_false.yaml  06_training_dfine_n_norm_true_ema_true.yaml  06_training_dfine_s.yaml  06_training_dfine_s_norm_false_ema_false.yaml  06_training_dfine_s_norm_false_ema_true.yaml  06_training_dfine_s_norm_true_ema_false.yaml  06_training_dfine_s_norm_true_ema_true.yaml  06_training_norm_true.yaml  README.md
notebooks/detr_finetune_reference/our_pipeline/: 05_data.yaml  06_training.yaml  README.md
notebooks/detr_finetune_reference/our_rtdetr_v2_albumentations/: 06_training.yaml  06_training_r50_norm_false_ema_false.yaml  README.md
notebooks/detr_finetune_reference/our_rtdetr_v2_torchvision/: 06_training.yaml  06_training_ema.yaml  06_training_norm_false.yaml  06_training_r18_norm_false_ema_false.yaml  06_training_r18_norm_false_ema_true.yaml  06_training_r18_norm_true_ema_false.yaml  06_training_r18_norm_true_ema_true.yaml  06_training_r50_norm_false_ema_false.yaml  06_training_r50_norm_false_ema_true.yaml  06_training_r50_norm_true_ema_false.yaml  06_training_r50_norm_true_ema_true.yaml  README.md
notebooks/detr_finetune_reference/our_yolox/: 05_data.yaml  06_training.yaml  README.md
notebooks/detr_finetune_reference/our_yolox_torchvision/: 05_data.yaml  06_training.yaml  README.md
notebooks/detr_finetune_reference/reference_dfine/: README.md  finetune.py  inference.py
notebooks/detr_finetune_reference/reference_rtdetr_v2/: README.md  finetune.py  inference.py
services/s18100_sam3_service/: .dockerignore  CLAUDE.md  Dockerfile  README.md  app.py  demo.py  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
services/s18100_sam3_service/configs/: default.yaml
services/s18100_sam3_service/src/: config.py  helpers.py  models.py  routes.py  schemas.py  segmentation.py  sessions.py
services/s18100_sam3_service/tests/: conftest.py  test00_health.py  test01_segment_box.py  test05_video_session.py  test06_error_and_edge_cases.py  test_real_data.py
services/s18100_sam3_service/tests/data/real/glove/: manifest.json
services/s18100_sam3_service/tests/data/real/labels/: bothFireAndSmoke_CV006490.txt  bothFireAndSmoke_CV016107.txt  fire_CV003759.txt  smoke_CV005420.txt  smoke_CV017962.txt  smoke_CV020422.txt
services/s18100_sam3_service/tests/data/real/phone/: manifest.json
services/s18100_sam3_service/tests/data/real/safety_shoe/: manifest.json
services/s18102_image_editor/: CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
services/s18102_image_editor/configs/: default.yaml
services/s18102_image_editor/src/: __init__.py  clients.py  compositing.py  config.py  helpers.py  routes.py  schemas.py
services/s18102_image_editor/tests/: conftest.py  test00_health.py  test01_inpaint_direct.py  test02_inpaint_bbox.py  test03_inpaint_text.py
services/s18104_auto_label/: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
services/s18104_auto_label/configs/: default.yaml
services/s18104_auto_label/src/: __init__.py  annotator.py  config.py  formatters.py  geometry.py  routes.py  rule_classifier.py  schemas.py  state.py  vlm_verifier.py
services/s18104_auto_label/tests/: CLAUDE.md  conftest.py  test00_health.py  test01_annotate.py  test02_jobs.py  test03_video.py  test04_convert.py  test05_parallel_batch.py  test06_rule_classify_vlm.py  test_real_data.py
services/s18104_auto_label/tests/data/real/: manifest.json
services/s18104_auto_label/tests/data/real/labels/: fire_CV009561.txt  fire_CV009855.txt  smoke_CV016435.txt  smoke_CV018275.txt
services/s18104_auto_label/tests/data/real/mask/: manifest.json
services/s18105_annotation_quality_assessment/: CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
services/s18105_annotation_quality_assessment/configs/: default.yaml
services/s18105_annotation_quality_assessment/src/: __init__.py  config.py  geometry.py  parsers.py  routes.py  sam3.py  schemas.py  scoring.py  state.py  validators.py  vlm.py
services/s18105_annotation_quality_assessment/tests/: conftest.py  test_endpoints.py  test_real_data.py  test_rule_aware.py  test_vlm.py
services/s18105_annotation_quality_assessment/tests/data/fire/: manifest.json
services/s18105_annotation_quality_assessment/tests/data/helmet/: manifest.json
services/s18105_annotation_quality_assessment/tests/data/labels/: fire_CV000409.txt
services/s18105_annotation_quality_assessment/tests/data/zone/: manifest.json
services/s18106_sam3_1_service/: CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
services/s18106_sam3_1_service/configs/: default.yaml
services/s18106_sam3_1_service/src/: config.py  models.py  routes.py  schemas.py  segmentation.py  sessions.py
services/s18106_sam3_1_service/tests/: conftest.py  test00_health.py  test02_segment_text.py  test03_auto_mask.py  test04_tracker_session.py  test07_batch_endpoints.py
services/s18106_sam3_1_service/tests/data/: .gitkeep
(+871 files in other folders)
