[project]
name = "cv-pipeline"
version = "0.1.0"
description = "Object detection training pipeline for factory smart camera safety detection"
requires-python = ">=3.12"
dependencies = [
    # --- Core utilities ---
    "pyyaml>=6.0.3",
    "numpy>=2.4",
    "tqdm>=4.67",
    "Pillow>=12.1",
    "requests>=2.33",
    "scipy>=1.17",
    # --- Deep learning stack ---
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@8213e0d920d52cb00dcade16b6d1f6e952ac0a8c",
    "accelerate>=1.13",
    "huggingface-hub>=1.8",
    "timm>=1.0.26",
    # --- CV utilities ---
    "opencv-python>=4.13",
    "matplotlib>=3.10",
    "supervision>=0.27.0",
    "trackers>=2.3",
    "av>=17.0",
    "Pillow>=12.1",
    # --- ONNX export + inference ---
    "onnx>=1.20",
    "onnxsim>=0.6",
    "thop>=0.1",
    "onnxruntime-gpu>=1.24; platform_machine == 'x86_64'",
    "onnxruntime>=1.24; platform_machine != 'x86_64'",
    # --- Data download + annotation ---
    "roboflow>=1.3.1",
    "ultralytics>=8.4.36",
    "label-studio-sdk>=2.0",
    # --- QA pipeline (LangGraph-based) ---
    "langgraph>=1.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=0.3",
    # --- Hyperparameter optimization ---
    "optuna>=4.8",
    "plotly>=6.6",
    "kaleido>=1.2",
    # --- Metrics (HF Trainer detection compute_metrics uses MeanAveragePrecision) ---
    "torchmetrics>=1.4",
    "pycocotools>=2.0",
    # --- Albumentations (optional per-transform-probability augmentation backend,
    # matches qubvel's reference notebook pipeline; ~2x faster than torchvision v2
    # per-sample CPU aug for detection. Selected via `augmentation.library: albumentations`
    # in a training config.) ---
    "albumentations>=1.4.6",
    # --- Logging ---
    "wandb>=0.25",
    # --- Demo UI ---
    "gradio>=6.10",
    # --- Notebooks ---
    "jupyterlab>=4.5",
    "ipywidgets>=8.1",
    # --- Pose (MediaPipe; skipped on aarch64 Linux where wheels are unavailable) ---
    "mediapipe>=0.10.33; sys_platform != 'linux' or platform_machine != 'aarch64'",
    # --- Testing / linting / versioning ---
    "pytest>=9.0",
    "ruff>=0.15",
    "dvc>=3.67",
    "playwright>=1.58",
    "pytest-playwright>=0.7",
    "tensorboard>=2.20.0",
]

[project.scripts]
demo = "app_demo.run:main"

[project.optional-dependencies]
# Bare `uv sync` installs everything for:
#   - p00 → p10 pipeline (data prep, QA, training, eval, export, inference)
#   - Label Studio review workflow
#   - HPO (Optuna)
#   - Gradio demo UI, Jupyter notebooks, MediaPipe pose
#   - pytest / ruff / dvc / Playwright testing
#
# The only extras are genuinely-optional heavyweight analytics:

# Interactive exploration / dataset analytics (fiftyone ~1 GB, cleanlab)
analysis = [
    "fiftyone>=1.13",
    "cleanlab>=2.9",
]

# NOTE: `optimum[onnxruntime]` (needed for INT8 quantization in core/p09_export)
# requires transformers<4.58, which conflicts with the git transformers pinned in
# base dependencies. Run `core/p09_export/export.py --skip-optimize` to bypass
# the optimization pass, or install optimum in a separate virtualenv when
# quantization is required.

all = [
    "cv-pipeline[analysis]",
]

[tool.setuptools.packages.find]
include = ["utils*", "step*", "services*", "core*", "tools*", "app_demo*"]
exclude = ["datasets*", "configs*", "temp*", "runs*", "requirements*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
