[project]
name = "annotation-qa-service"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.28",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "langgraph>=1.1",
    "langchain-openai>=1.1",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "configs*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "opencv-python-headless>=4.13.0.92",
    "pytest>=9.0.2",
    "supervision>=0.27.0.post2",
]
